--- a/src/app/dashboard/side-bar/side-bar.component.html
+++ b/src/app/dashboard/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <clr-vertical-nav-group routerLinkActive="active">
   <clr-icon shape="user" clrVerticalNavIcon></clr-icon>
-  User management
+   User management
   <clr-vertical-nav-group-children>
 
     <a clrVerticalNavLink routerLink="./authorities" routerLinkActive="active">
@@ -14,3 +14,7 @@
     </a>
   </clr-vertical-nav-group-children>
 </clr-vertical-nav-group>
+<a clrVerticalNavLink routerLinkActive="active" routerLink="./credit">
+  <clr-icon shape="tools" clrVerticalNavIcon></clr-icon>
+  Spare parts
+</a>
