--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -14,7 +14,7 @@
         <clr-icon shape="caret down"></clr-icon>
       </button>
       <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-        <a href="..." clrDropdownItem>Profile</a>
+        <a routerLink="./user-profile" clrDropdownItem>Profile</a>
         <a (click) ="logout()" clrDropdownItem>Log out</a>
       </clr-dropdown-menu>
     </clr-dropdown>
